update ko docs2 for aistudios and aihumansdk

--- a/localization/i18n/ko/docusaurus-plugin-content-docs/current/aistudios/reference/export-project.mdx
+++ b/localization/i18n/ko/docusaurus-plugin-content-docs/current/aistudios/reference/export-project.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 2
 ---
 
-# Exporting projects
+# 프로젝트 내보내기
 
 Project export deals with how to synthesize new images by sending api requests in JSON format.
 
