--- a/localization/i18n/ko/docusaurus-plugin-content-docs/current/aistudios/reference/progress.mdx
+++ b/localization/i18n/ko/docusaurus-plugin-content-docs/current/aistudios/reference/progress.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 3
 ---
 
-# Check the progress of the project.
+# 프로젝트 진행률 확인하기
 
 Project export deals with how to synthesize new images by sending api requests in JSON format.
 
