--- a/localization/i18n/ko/docusaurus-plugin-content-docs/current/aistudios/reference/auth.mdx
+++ b/localization/i18n/ko/docusaurus-plugin-content-docs/current/aistudios/reference/auth.mdx
@@ -2,21 +2,20 @@
 sidebar_position: 1
 ---
 
-# Authentication
+# API 사용권한 인증
 
 
+## 1. API 키 생성
 
-## 1. API key generation
-
-If your account is subscribed to the API plan, you will need to get an API key. When selecting the account name at the top right of the screen after logging in, go to the "Profile" item of the account from the exposure menu and generate the API key by executing the "Issuing API Key" at the bottom of the screen. Once activated, the created 'API Secret Key' can no longer be checked, so please copy it separately and manage it safely.
+계정이 API 요금제에 가입이 되었다면 이 후 API 키를 발급받아야 합니다. 로그인 후 화면 우측 상단 계정명을 선택 시 노출 메뉴에서 계정의 '프로필' 항목으로 이동하여 화면 하단의 'API 키 발급'을 실행하여 API 키를 생성합니다. 생성 된 'API Secret Key' 는 한번 활성화 되면 더이상 확인이 불가하므로 별도로 복사하여 안전하게 관리하여 주세요.
 
 [Generate API key](https://www.deepbrainai.io/pricing)
 
 
 
-## 2. Making API videos.
+## 2. API 영상 제작하기
 
-A test image is produced with the issued 'API Key' to check the ID value of the generated image.
+발급된 'API Key'로 테스트 영상을 제작하여, 생성된 영상의 ID값을 확인합니다.
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
